--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -4,32 +4,68 @@
 
 /**
  * Set up a decent box model on the root element
- */
-html {
+//  */
+// html {
+//   box-sizing: border-box;
+// }
+
+// /**
+//  * Make all elements from the DOM inherit from the parent box-sizing
+//  * Since `*` has a specificity of 0, it does not override the `html` value
+//  * making all elements inheriting from the root box-sizing value
+//  * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+//  */
+// *,
+// *::before,
+// *::after {
+//   box-sizing: inherit;
+// }
+
+// /**
+//  * Basic styles for links
+//  */
+// a {
+//   color: $brand-color;
+//   text-decoration: none;
+
+//   @include on-event {
+//     color: $text-color;
+//     text-decoration: underline;
+//   }
+// }
+
+
+*{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: 'DM Sans', sans-serif;
+  overflow-x: hidden;
+}
+ul{
+  list-style-type: none;
 }
 
-/**
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+a, button, li{
+  cursor: pointer;
 }
-
-/**
- * Basic styles for links
- */
-a {
-  color: $brand-color;
+a{
   text-decoration: none;
-
-  @include on-event {
-    color: $text-color;
-    text-decoration: underline;
-  }
+  text-transform: uppercase;
+  font-size: $a;
+  letter-spacing: 2px;
+  font-weight: 700;
 }
+
+.image{
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+  
+}
+
+.link{
+      display: flex;
+      align-items: center;
+  
+  }
