--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -1,3 +1,26 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+footer{
+    background-color: $pureBlack;
+
+    // .socialLinks{
+    //     display: flex;
+
+    //     .facebook{
+            
+    //         .facebookBW{
+    //             display: block;
+    //             &:hover{
+    //                 display: none;
+    //             }
+    //         }
+    //         .facebookCO{
+    //             display: none;
+    //             &:hover{
+    //                 display: block;
+    //             }
+    //         }
+    //     }
+    // }
+}
