--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -88,6 +88,7 @@
   //SectionHeight
   $section75: 80vh;
   $section70: 75vh;
+  $section65:70vh;
 
   //image darkener
   $imgDarkener: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
