--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -29,7 +29,8 @@
 // 6. Page-specific styles
 @import
   'pages/shared',
-  'pages/home';
+  'pages/home',
+  'pages/stories';
 
 // 7. Themes
 @import
