--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -30,7 +30,9 @@
 @import
   'pages/shared',
   'pages/home',
-  'pages/stories';
+  'pages/stories',
+  'pages/features',
+  'pages/pricing';
 
 // 7. Themes
 @import
