--- a/stylesheets/pages/_stories.scss
+++ b/stylesheets/pages/_stories.scss
@@ -88,8 +88,6 @@
     }
 
     .imgCard{
-        background-position: center;
-        background-size:cover ;
-        background-repeat: no-repeat;
+        @include bgDefault;
     }
 }
