--- a/stylesheets/abstracts/_mixins.scss
+++ b/stylesheets/abstracts/_mixins.scss
@@ -40,15 +40,17 @@
   display: flex;
   flex-direction: column;
   gap: 1.75rem;
-  margin: 0 auto;
+  align-items: flex-start;
+  padding: 7rem;
+  // margin: 0 auto;
   justify-content: center;
   height: 100%;
   h1,
   p,
   .link{
-    width: 65%;
+    width: 100%;
     min-width: 300px;
-    margin: 0 auto;
+    // margin: 0 auto;
   }
   .link{
     gap: 2rem;
@@ -111,9 +113,7 @@
 @mixin heroSpec($light:false) {
   display: flex;
   flex-direction: column;
-  
-  
-  
+
   
   h1,
   p,
@@ -167,4 +167,11 @@
         color: $pureWhite;
     }
 }
+}
+
+
+@mixin bgDefault {
+  background-position: center;
+  background-size:cover ;
+  background-repeat: no-repeat;
 }
