--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -61,19 +61,18 @@
         justify-content: flex-end;
         width: 25%;
         height: $section65;
-        background-position: center;
-        background-size:cover ;
-        background-repeat: no-repeat;
+        
         color: $pureWhite;
         padding: 2em 2em;
         background-image: 100%;
+        @include bgDefault;
     }
     hr{
         border-top: 1px solid var(--pureWhite);
     }
 }
 
-.sectionFive{
+.featuresSection{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
