--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -20,10 +20,6 @@ a, button, li {
 
 a {
   text-decoration: none;
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 2px;
-  font-weight: 700;
 }
 
 .image {
@@ -68,14 +64,221 @@ header .mainNav {
   gap: 3.5rem;
 }
 
-footer {
-  background-color: #000;
+header .mainNav .mainNavLink {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  color: #000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-footer .socialLinks {
+header .mainNav .mainNavLink:hover, header .mainNav .mainNavLink:active, header .mainNav .mainNavLink:focus {
+  opacity: 0.3;
+}
+
+header .mainNav .mainNavLink a:visited {
+  color: #000;
+}
+
+footer {
+  background-color: #000;
+  padding: 3rem 10rem;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 50% 1fr;
+      grid-template-columns: 1fr 50% 1fr;
+}
+
+footer .logoNav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .logoNav .socialLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.875rem;
+}
+
+footer .logoNav .socialLinks .socialLink {
+  cursor: pointer;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+footer .logoNav .socialLinks .socialLink:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+}
+
+footer .footerNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.125rem;
+}
+
+footer .footerNav .footerNavLink {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 700;
+  color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+footer .footerNav .footerNavLink:hover, footer .footerNav .footerNavLink:active, footer .footerNav .footerNavLink:focus {
+  opacity: 0.3;
+}
+
+footer .footerNav .footerNavLink a:visited {
+  color: #fff;
+}
+
+footer .rights {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+footer .rights p {
+  color: #fff;
+  font-size: 15px;
+  opacity: 0.6;
+}
+
+@media (max-width: 1000px) {
+  footer {
+    min-height: 40vh;
+    -ms-grid-columns: 1.5fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
+    -ms-grid-rows: 1fr 2fr;
+        grid-template-rows: 1fr 2fr;
+    padding: 5rem 2.5rem;
+    gap: 2rem;
+  }
+  footer .logoNav {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 1/1/3/2;
+  }
+  footer nav {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+  footer nav .footerNav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  footer .rights {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 1/2/3/3;
+  }
+}
+
+.btn1 {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 1em 2em;
+  border: none;
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+  background-color: #000;
+  color: #fff;
+}
+
+.btn1:hover, .btn1:active, .btn1:focus {
+  background-color: #dfdfdf;
+  color: #000;
+}
+
+.btn2 {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 1em 2em;
+  border: none;
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+  background-color: #fff;
+  color: #000;
+}
+
+.btn2:hover, .btn2:active, .btn2:focus {
+  background-color: #dfdfdf;
+}
+
+.btnB {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #000;
+}
+
+.btnB:hover, .btnB:active, .btnB:focus {
+  border-bottom: 2px solid #000;
+}
+
+.btnW {
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #fff;
+}
+
+.btnW:hover, .btnW:active, .btnW:focus {
+  border-bottom: 2px solid #fff;
 }
 
 .imgCards {
@@ -113,7 +316,7 @@ footer .socialLinks {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 7rem;
+  padding: 8%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -126,6 +329,8 @@ footer .socialLinks {
 .sectionOne .heroText .link {
   width: 100%;
   min-width: 300px;
+  max-width: 550px;
+  overflow-y: hidden;
 }
 
 .sectionOne .heroText .link {
@@ -190,7 +395,7 @@ footer .socialLinks {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 7rem;
+  padding: 8%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -205,6 +410,8 @@ footer .socialLinks {
 .sectionThree .textBox .link {
   width: 100%;
   min-width: 300px;
+  max-width: 550px;
+  overflow-y: hidden;
 }
 
 .sectionTwo .textBox .link, .sectionThree .textBox .link {
@@ -294,17 +501,30 @@ footer .socialLinks {
       -ms-flex-pack: end;
           justify-content: flex-end;
   width: 25%;
-  height: 70vh;
+  height: 65vh;
   color: #fff;
   padding: 2em 2em;
   background-image: 100%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
+  top: 0;
+  -webkit-transition: top ease-in-out 0.5s;
+  transition: top ease-in-out 0.5s;
+}
+
+.imgCards .imgCard:hover, .imgCards .imgCard:focus, .imgCards .imgCard:active {
+  top: -20px;
+  border-bottom: 10px solid transparent;
+  -o-border-image: linear-gradient(90deg, #FFC593, #BC7198, #5A77FF);
+     border-image: -webkit-gradient(linear, left top, right top, from(#FFC593), color-stop(#BC7198), to(#5A77FF));
+     border-image: linear-gradient(90deg, #FFC593, #BC7198, #5A77FF);
+  border-image-slice: 1;
 }
 
 .imgCards hr {
-  border-top: 1px solid var(--pureWhite);
+  border-top: 1px solid #fff;
 }
 
 .featuresSection {
@@ -315,7 +535,7 @@ footer .socialLinks {
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
   gap: 1.875rem;
-  padding: 10rem;
+  padding: clamp(20px, 100px, 10rem);
   align-self: flex-end;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -353,6 +573,185 @@ footer .socialLinks {
   text-align: center;
 }
 
+@media (max-width: 1000px) {
+  .sectionOne {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 80vh;
+  }
+  .sectionOne .imgOne {
+    width: 40%;
+    max-width: 40%;
+  }
+  .sectionOne .heroText {
+    width: 45%;
+    min-width: 45%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1.75rem;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 8%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+    background-color: #000;
+    width: 60%;
+  }
+  .sectionOne .heroText h1,
+  .sectionOne .heroText p,
+  .sectionOne .heroText .link {
+    width: 100%;
+    min-width: 300px;
+    max-width: 550px;
+    overflow-y: hidden;
+  }
+  .sectionOne .heroText .link {
+    gap: 2rem;
+  }
+  .sectionOne .heroText h1 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 4.2px;
+  }
+  .sectionOne .heroText p {
+    line-height: 25px;
+    font-size: 15px;
+  }
+  .sectionOne .heroText a {
+    color: var(--pureWhite);
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  .sectionOne .heroText h1 {
+    color: #fff;
+  }
+  .sectionOne .heroText p {
+    color: #fff;
+  }
+  .sectionOne .heroText a {
+    color: #fff;
+  }
+  .sectionTwo, .sectionThree {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 75vh;
+  }
+  .sectionTwo .imgHm, .sectionThree .imgHm {
+    width: 40%;
+    max-width: 40%;
+    min-width: 40%;
+  }
+  .sectionTwo .textBox, .sectionThree .textBox {
+    width: 45%;
+    min-width: 45%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1.75rem;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 8%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+    background-color: #fff;
+    width: 60%;
+  }
+  .sectionTwo .textBox h1,
+  .sectionTwo .textBox p,
+  .sectionTwo .textBox .link, .sectionThree .textBox h1,
+  .sectionThree .textBox p,
+  .sectionThree .textBox .link {
+    width: 100%;
+    min-width: 300px;
+    max-width: 550px;
+    overflow-y: hidden;
+  }
+  .sectionTwo .textBox .link, .sectionThree .textBox .link {
+    gap: 2rem;
+  }
+  .sectionTwo .textBox h1, .sectionThree .textBox h1 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 4.2px;
+  }
+  .sectionTwo .textBox p, .sectionThree .textBox p {
+    line-height: 25px;
+    font-size: 15px;
+  }
+  .sectionTwo .textBox a, .sectionThree .textBox a {
+    color: var(--pureWhite);
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  .sectionTwo .textBox h1, .sectionThree .textBox h1 {
+    color: #000;
+  }
+  .sectionTwo .textBox p, .sectionThree .textBox p {
+    color: #000;
+  }
+  .sectionTwo .textBox a, .sectionThree .textBox a {
+    color: #000;
+  }
+  .imgCards .imgCard {
+    width: 50%;
+  }
+  .featuresSection {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    padding: clamp(20px, 60px, 10rem);
+  }
+  .featuresSection .responsive, .featuresSection .noLimit, .featuresSection .embed {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .featuresSection .featureRes {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .featuresSection .featureLimit {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .featuresSection .featureEmbed {
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    grid-row: 6/7;
+  }
+  .featuresSection .feature {
+    max-width: 85%;
+    margin: 0 auto;
+  }
+}
+
 .heroStories {
   display: -ms-grid;
   display: grid;
@@ -363,7 +762,7 @@ footer .socialLinks {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 6rem 7rem;
+  padding: 15vh 0 0 7rem;
   height: 80vh;
 }
 
@@ -376,6 +775,7 @@ footer .socialLinks {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1rem;
+  max-width: 450px;
 }
 
 .heroStories .storiesHeroText .featured, .heroStories .storiesHeroText .storyTitle {
@@ -505,7 +905,7 @@ footer .socialLinks {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 7rem;
+  padding: 8%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -519,6 +919,8 @@ footer .socialLinks {
 .hero .heroText .link {
   width: 100%;
   min-width: 300px;
+  max-width: 550px;
+  overflow-y: hidden;
 }
 
 .hero .heroText .link {
@@ -561,13 +963,56 @@ footer .socialLinks {
   max-width: 400px;
 }
 
-.featuresSection {
+.featuredMain {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  gap: 1.875rem;
+  padding: clamp(20px, 100px, 10rem);
+  align-self: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   -ms-grid-rows: (1fr)[4];
       grid-template-rows: repeat(4, 1fr);
   row-gap: 2.5rem;
 }
 
-.featuresSection .domain, .featuresSection .exposure, .featuresSection .drag-drop {
+.featuredMain .responsive, .featuredMain .noLimit, .featuredMain .embed {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.featuredMain .feature {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 2em;
+  padding: 0 2em;
+  text-align: center;
+}
+
+.featuredMain .domain, .featuredMain .exposure, .featuredMain .drag-drop {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -613,24 +1058,28 @@ footer .socialLinks {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 5%;
 }
 
 .pricing .pricingCards {
-  width: 100vw;
-  padding: 2rem 10%;
-  height: 70vh;
+  width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 85% 1fr;
-      grid-template-rows: 1fr 85% 1fr;
+  -ms-grid-rows: 2fr minmax(500px, auto) 1fr;
+      grid-template-rows: 2fr minmax(500px, auto) 1fr;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
+  row-gap: 1rem;
 }
 
 .pricing .pricingCards .price1 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
-  grid-area: 2/1/-1/2;
+  grid-area: 2/1/3/2;
 }
 
 .pricing .pricingCards .pricingPro {
@@ -642,8 +1091,119 @@ footer .socialLinks {
 }
 
 .pricing .pricingCards .price2 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
-  grid-area: 2/3/-1/4;
+  grid-area: 2/3/3/4;
+}
+
+.pricing .pricingCards .pricingB {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  font-weight: 700;
+  text-align: center;
+  color: #000;
+  background-color: #F5F5F5;
+  padding: 3.375rem 2.5rem;
+}
+
+.pricing .pricingCards .pricingB > * {
+  max-width: 80%;
+}
+
+.pricing .pricingCards .pricingB h2 {
+  font-size: 24px;
+}
+
+.pricing .pricingCards .pricingB p {
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: 400;
+  opacity: 0.6;
+  margin-bottom: 2rem;
+}
+
+.pricing .pricingCards .pricingB h1 {
+  font-size: 40px;
+}
+
+.pricing .pricingCards .pricingPro {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  padding: 3.375rem 2.5rem;
+}
+
+.pricing .pricingCards .pricingPro > * {
+  max-width: 80%;
+}
+
+.pricing .pricingCards .pricingPro h2 {
+  font-size: 24px;
+}
+
+.pricing .pricingCards .pricingPro p {
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: 400;
+  opacity: 0.6;
+  margin-bottom: 2rem;
+}
+
+.pricing .pricingCards .pricingPro h1 {
+  font-size: 40px;
+}
+
+.pricing .pricingCards button {
+  width: 100%;
+}
+
+.comparison {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.comparison table {
+  width: 60%;
+}
+
+.comparison table tr > th {
+  border-bottom: 2px #000 solid;
 }
 /*# sourceMappingURL=main.css.map */
