--- a/stylesheets/pages/_pricing.scss
+++ b/stylesheets/pages/_pricing.scss
@@ -3,24 +3,54 @@
 .pricing{
     display: flex;
     flex-direction: column;
+    padding: 5% ;
 
     .pricingCards{
-        width: 100vw;
-        padding: 2rem 10%;
-        height: $section65;
+        width: 100%;
+        // padding: 2rem 10%;
+        // height: $section65;
 
         display: grid;
-        grid-template-rows: 1fr 85% 1fr;
+        grid-template-rows: 2fr minmax(500px, auto) 1fr;
         grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+        row-gap: 1rem;
 
         .price1{
-            grid-area: 2/1/-1/2;
+            grid-area: 2/1/3/2;
         }
         .pricingPro{
             grid-area: 1/2/4/3;
         }
         .price2{
-            grid-area: 2/3/-1/4;
+            grid-area: 2/3/3/4;
+        }
+
+
+        .pricingB{
+            @include priceCard($light:true);
+        }
+        
+        .pricingPro{
+            @include priceCard($light:false);
+        }
+
+        button{
+            width: 100%;
+        }
+    }
+}
+
+
+.comparison{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    table{
+        width: 60%;
+        tr>th{
+            border-bottom: 2px $pureBlack solid;
         }
     }
 }
