--- a/stylesheets/pages/_stories.scss
+++ b/stylesheets/pages/_stories.scss
@@ -5,7 +5,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 6rem 7rem;
+    padding: 15vh 0 0 7rem;
     height: $section75;
     
 
@@ -15,6 +15,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        max-width: 450px;
        
 
 
@@ -31,6 +32,8 @@
         .storyTitle{
             font-size: $H1;
             letter-spacing: 4.2px;
+            // line-height: 48px;
+            // overflow-y: h;
         }
         p{
             color: rgba($color: $pureWhite, $alpha: .6);
