--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -61,7 +61,7 @@ header .mainNav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 3.5rem;
+  gap: 2.5rem;
 }
 
 header .mainNav .mainNavLink {
@@ -774,7 +774,7 @@ footer .rights p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   max-width: 450px;
 }
 
@@ -876,6 +876,17 @@ footer .rights p {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 1000px) {
+  .heroStories {
+    -ms-grid-columns: 1.5fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
+    padding: 15% 2.5rem 0 2.5rem;
+  }
+  .heroStories .storiesHeroText {
+    max-width: 400;
+  }
 }
 
 .hero {
@@ -1050,6 +1061,77 @@ footer .rights p {
   max-width: 35%;
 }
 
+@media (max-width: 1000px) {
+  .featuredMain {
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 1rem;
+            column-gap: 1rem;
+    padding: 5rem 2.5rem;
+  }
+  .featuredMain .responsive {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 1/1/2/2;
+  }
+  .featuredMain .noLimit {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 1/2/2/3;
+  }
+  .featuredMain .featureRes {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 2/1/3/2;
+  }
+  .featuredMain .featureLimit {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 2/2/3/3;
+  }
+  .featuredMain .featureEmbed {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 4/1/5/2;
+  }
+  .featuredMain .featureDomain {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 4/2/5/3;
+  }
+  .featuredMain .featureHome {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+  }
+  .footerBanner {
+    padding: 5rem 2.5rem;
+  }
+  .footerBanner h1 {
+    max-width: 60%;
+  }
+}
+
 .pricing {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1205,5 +1287,42 @@ footer .rights p {
 
 .comparison table tr > th {
   border-bottom: 2px #000 solid;
+}
+
+@media (max-width: 1000px) {
+  .pricing .pricingCards {
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  .pricing .pricingCards .price1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 1/1/2/3;
+  }
+  .pricing .pricingCards .pricingPro {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 2/1/3/3;
+  }
+  .pricing .pricingCards .price2 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 3/1/4/3;
+  }
+  .pricing .pricingCards .pricingB, .pricing .pricingCards .pricingPro {
+    height: 30vh;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 /*# sourceMappingURL=main.css.map */
