--- a/stylesheets/pages/_features.scss
+++ b/stylesheets/pages/_features.scss
@@ -48,3 +48,48 @@
     }
 }
 
+
+
+@media (max-width:$tablet){
+    .featuredMain{
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        padding: 5rem 2.5rem;
+        
+        .responsive{
+            grid-area: 1/1/2/2;
+        }
+        .noLimit{
+            grid-area:1/2/2/3 ;
+        }
+        .featureRes{
+            grid-area: 2/1/3/2;
+        }
+        .featureLimit{
+            grid-area: 2/2/3/3;
+        }
+        .featureEmbed{
+            grid-area: 4/1/5/2;
+        }
+        .featureDomain{
+            grid-area: 4/2/5/3;
+        }
+        .featureHome{
+            display: flex;
+            flex-direction: column;
+            
+            text-align: center;
+            gap: 1rem;
+        }
+    }
+
+    .footerBanner{
+        padding: 5rem 2.5rem;
+
+        h1{
+            max-width: 60%;
+
+        }
+    }
+}
